# c_libtorch_opencv

./: CMakeLists.txt  README.md  digit.cpp  digit.py  digit_test.cpp  libtorch_from_source_code.md  test_digit.py
